--- a/lectio/mateo.html
+++ b/lectio/mateo.html
@@ -40,37 +40,69 @@
 LA LECTIO DIVINA
 
 1 LECTIO ¿QUÉ DIJO EL SEÑOR?
-.1 LA LECTURA DEL TEXTO ( DEFINIR Y COMPRENDER)
-.1.1 DEFINIR EL TEXTO
-.1.1.1 LATINOAMERICANA
-.1.1.2 JERUSALÉN
-.1.1.3 VERSIÓN GRIEGA (LXX- TISCHENDORF)
-.1.1.4 VERSIÓN LATINA (VULGATA)
-.1.1.5 VERSIÓN JUDÍA (KADOSH)
-.1.1.6 NVI
-.1.1.7 RV60
-.1.1.8 COMPARACIÓN E-SWORD
- El texto no tiene mayor variación. Por defecto usaré las Biblias de JERUSALÉN y la Latinoamericana.
+ LA LECTURA DEL TEXTO ( DEFINIR EL TEXTO)
 
-.1.2 COMPRENSIÓN DEL TEXTO EN SU CONTEXTO VITAL
-.1.2.1 LOS DESTINATARIOS
-.1.2.1.1 Cuál era la situación vital
+LATINOAMERICANA
+JERUSALÉN
+ VERSIÓN GRIEGA (LXX- TISCHENDORF)
+ VERSIÓN LATINA (VULGATA)
+ VERSIÓN JUDÍA (KADOSH)
+ NVI
+ RV60
+
+COMPRENSIÓN DEL TEXTO EN SU CONTEXTO VITAL
+LOS DESTINATARIOS
+ Cuál era la situación vital
 Años 64-70 la comunidad cristiana era expulsada de las sinagogas y esto genera una crisis en el seno de las familias
 judías con miembros cristianos, además el gobierno romano inicia la persecución a los cristianos.
 
-.1.2.1.2 Qué esperaban de Dios
+Qué esperaban de Dios
 Lo probable era la necesidad de paz. Interior al ser confirmados en su fe en Jesús y exterior al evitar la tragedia de
 la persecución.
-.1.2.2 EL AUTOR
 
-.1.2.2.1 Qué quería comunicar el autor
-Mateo es sensible a esta realidad, que él también la vive. Habla desde su experiencia personal con la realidad y con
-Dios.
-Quiere comunicar la fe en Cristo, presentarlo desde la experiencia judía, resaltar la novedad del evangelio y hacerla
-vida en esas condiciones concretas.
+EL AUTOR
+Mateo, uno de los doce apóstoles de Jesús, es una figura clave en el Nuevo Testamento. A continuación se presenta un resumen de lo que sabemos sobre él:
 
-.1.2.3 GÉNERO LITERARIO
-.1.2.3.1 Cómo fue comunicado el mensaje
+### Identidad y Profesión
+- **Nombre**: Mateo, también conocido como Leví.
+- **Ocupación**: Antes de seguir a Jesús, Mateo era un recaudador de impuestos. En aquella época, los recaudadores de impuestos eran vistos con desprecio por muchos judíos debido a su colaboración con los romanos y su tendencia a la corrupción.
+
+### Llamamiento
+- **Llamado por Jesús**: Según los Evangelios sinópticos (Mateo, Marcos y Lucas), Jesús llamó a Mateo a ser su discípulo mientras este estaba sentado en su oficina de recaudación de impuestos. Mateo dejó su trabajo y siguió a Jesús inmediatamente.
+- **Reacción de la comunidad**: La decisión de Jesús de llamar a un recaudador de impuestos como discípulo fue sorprendente y polémica, dado el desprecio que la sociedad tenía por esta profesión.
+
+### Autor del Evangelio
+- **Evangelio de Mateo**: Tradicionalmente, se le atribuye a Mateo la autoría del primer evangelio del Nuevo Testamento. Este evangelio está dirigido principalmente a una audiencia judía y enfatiza cómo Jesús cumple las profecías del Antiguo Testamento.
+
+### Vida y Misión
+- **Misión apostólica**: Después de la resurrección y ascensión de Jesús, Mateo predicó el evangelio. Según diversas tradiciones, viajó a diferentes regiones para llevar el mensaje cristiano.
+- **Muerte**: Hay varias tradiciones sobre la muerte de Mateo. Algunas sugieren que murió como mártir, aunque los detalles varían según la fuente.
+
+### Símbolos y Representaciones
+- **Símbolos**: En el arte cristiano, Mateo a menudo se representa con un ángel o un hombre alado, uno de los cuatro seres vivientes del Apocalipsis, simbolizando su evangelio.
+- **Festividad**: La Iglesia Católica celebra la festividad de San Mateo el 21 de septiembre.
+
+### Aportaciones y Legado
+- **Evangelio de Mateo**: Este evangelio es una de las fuentes principales sobre la vida y enseñanzas de Jesús. Contiene el Sermón de la Montaña, la Gran Comisión y varias parábolas y milagros.
+- **Impacto**: El Evangelio de Mateo ha tenido un impacto significativo en la teología cristiana y en la liturgia de la Iglesia.
+
+Mateo es recordado no solo como uno de los doce apóstoles de Jesús, sino también como un autor fundamental del Nuevo Testamento, cuyo evangelio ha sido una guía espiritual y doctrinal para los cristianos a lo largo de los siglos.
+
+EL EVANGELIO
+El Evangelio de Mateo se escribió aproximadamente entre el 70 y el 90 d.C. Esta fecha se basa en varios factores, entre los que se incluyen:
+
+### Factores Internos
+1. **Dependencia de otras fuentes**: El Evangelio de Mateo muestra una fuerte dependencia del Evangelio de Marcos, que se cree que fue escrito alrededor del 65-70 d.C.
+2. **Destrucción del Templo de Jerusalén**: Mateo contiene referencias a la destrucción del Templo de Jerusalén, un evento que ocurrió en el año 70 d.C. Esto sugiere que el evangelio se escribió después de este evento, ya que los detalles parecen indicar que el autor tenía conocimiento de dicha destrucción.
+
+### Factores Externos
+1. **Uso en comunidades cristianas**: Los escritos de los Padres de la Iglesia y las evidencias litúrgicas indican que el Evangelio de Mateo estaba en uso a finales del primer siglo y principios del segundo siglo, lo que apoya una fecha de composición en la última parte del primer siglo.
+2. **Situación socio-religiosa**: El contenido del Evangelio de Mateo refleja una comunidad en transición, con tensiones entre judíos cristianos y judíos no cristianos, lo que es consistente con el período post-destrucción del Templo cuando la identidad judía y cristiana estaba en proceso de re-definición.
+
+En resumen, aunque no hay un consenso absoluto, la mayoría de los estudiosos del Nuevo Testamento sitúan la composición del Evangelio de Mateo en algún momento entre el 70 y el 90 d.C.
+
+GÉNERO LITERARIO
+Cómo fue comunicado el mensaje
 Es una narración rítmica, esquemática con miras a ser fácilmente comprendida y hasta memorizada
 .1.2.4 CUÁL SERÍA EL MENSAJE
 La genealogía de Jesús, En 1,1 enfatiza que es hijo de David, en quien cumple Dios las promesas a su pueblo pero agrega
@@ -78,17 +110,130 @@ hijo de Abraham en quien la promesa se extiende a toda la humanidad.
 Además, Muestra que la bendición a todos los hombres ya estaba presente por la presencia de extranjeros en los
 antepasados de Jesús, y no solo extranjeros sino personas consideradas pecadores
 Pudiendo citar a reinas y mujeres celebres y piadosas escoge a:
- TAMAR, cananea, quién se prostituye para que se cumpla la ley del levirato. Gn 12,1-4
- RAHAB, prostituta cananea que ayuda a la conquista de la tierra prometida por Dios a los judíos, Jos 2,1-21
- BETSABÉ, amonita, mujer casada que fue seducida por David y madre de Salomón. 2Sam 11,1-27
- RUT, moabita, una mujer ejemplar pero separada del pueblo de Dios a causa de su origen. Rut 4-5
- MARÍA, quién comparte con todas las anteriores una situación irregular, embarazada sin estar casada. Mt 1,19
+
+TAMAR, cananea, quién se prostituye para que se cumpla la ley del levirato. Gn 12,1-4
+RAHAB, prostituta cananea que ayuda a la conquista de la tierra prometida por Dios a los judíos, Jos 2,1-21
+BETSABÉ, amonita, mujer casada que fue seducida por David y madre de Salomón. 2Sam 11,1-27
+RUT, moabita, una mujer ejemplar pero separada del pueblo de Dios a causa de su origen. Rut 4-5
+MARÍA, quién comparte con todas las anteriores una situación irregular, embarazada sin estar casada. Mt 1,19
+
+IDEAS CENTRALES DEL EVANGELIO
+El Evangelio de Mateo presenta varias ideas fundamentales que han sido esenciales para la teología cristiana y para la comprensión de la vida y enseñanzas de Jesús. A continuación se enumeran algunas de las más importantes:
+
+### 1. Jesús como el Mesías y cumplimiento de las profecías
+Mateo se esfuerza por mostrar que Jesús es el Mesías prometido en el Antiguo Testamento. A lo largo del evangelio, Mateo cita numerosas profecías del Antiguo Testamento y las relaciona con eventos en la vida de Jesús para demostrar que él cumple esas profecías (por ejemplo, Mateo 1:22-23, 2:15, 2:17-18).
+
+### 2. El Reino de los Cielos
+El concepto del "Reino de los Cielos" es central en el Evangelio de Mateo. Jesús habla extensamente sobre este reino en sus enseñanzas y parábolas (por ejemplo, en el Sermón del Monte, Mateo 5-7, y en las parábolas del capítulo 13). Este reino es presentado como un reino espiritual que requiere justicia, humildad y una vida transformada.
+
+### 3. La ética del Reino
+El Sermón del Monte (Mateo 5-7) es una de las secciones más conocidas y contiene las enseñanzas éticas fundamentales de Jesús. Incluye las Bienaventuranzas, instrucciones sobre la ley, la oración (incluyendo el Padre Nuestro), el amor a los enemigos y otras enseñanzas sobre la conducta moral y espiritual.
+
+### 4. La autoridad de Jesús
+Mateo presenta a Jesús como alguien con autoridad divina sobre la ley, la naturaleza, las enfermedades y los demonios. Sus enseñanzas y milagros subrayan esta autoridad, y su resurrección confirma su identidad y misión (Mateo 28:18).
+
+### 5. La misión universal de la Iglesia
+El Evangelio de Mateo termina con la Gran Comisión (Mateo 28:18-20), donde Jesús instruye a sus discípulos a hacer discípulos de todas las naciones, bautizándolos y enseñándoles a obedecer todo lo que él ha mandado. Esto enfatiza la misión universal de la Iglesia.
+
+### 6. La relación con el judaísmo
+Mateo está escrito con una audiencia judía en mente y a menudo aborda cuestiones de la ley judía y las tradiciones. Sin embargo, también critica a los líderes religiosos judíos por su hipocresía y rechaza la exclusividad étnica de la salvación, destacando que el mensaje de Jesús es para todas las naciones.
+
+### 7. Jesús como el nuevo Moisés
+Mateo presenta a Jesús como una figura similar a Moisés, especialmente en la forma en que Jesús da su ley en el Sermón del Monte (paralelismo con Moisés recibiendo la ley en el Monte Sinaí). Esto establece a Jesús como el nuevo legislador y líder espiritual.
+
+### 8. El cumplimiento de la ley
+Mateo muestra a Jesús no como alguien que abole la ley, sino como alguien que la cumple y la lleva a su plenitud (Mateo 5:17-20). Jesús interpreta la ley en su verdadero espíritu y esencia, centrándose en la justicia, la misericordia y la fidelidad.
+
+Estas ideas fundamentales forman el núcleo del mensaje teológico y ético del Evangelio de Mateo y han sido influentes en la teología cristiana y en la práctica de la fe cristiana a lo largo de la historia.
+
+BIBLIOGRAFÍA
+Claro, hay varios autores católicos que han escrito comentarios y estudios detallados sobre el Evangelio de Mateo. Aquí tienes algunas recomendaciones de libros de autores católicos que son ampliamente respetados:
+
+### Comentarios y Estudios Católicos sobre el Evangelio de Mateo
+
+1. **"The Gospel of Matthew"** de Daniel J. Harrington, SJ
+   - Parte de la serie Sacra Pagina, este comentario es accesible y erudito, ofreciendo una profunda exégesis y reflexión teológica desde una perspectiva católica.
+
+2. **"The Navarre Bible: St. Matthew"** (University of Navarre)
+   - Este comentario combina la exégesis moderna con reflexiones teológicas y espirituales, utilizando enseñanzas de los Padres de la Iglesia y documentos del Magisterio.
+
+3. **"Catholic Commentary on Sacred Scripture: The Gospel of Matthew"** de Curtis Mitch y Edward Sri
+   - Este comentario es parte de una serie que busca ofrecer una interpretación fiel a la enseñanza de la Iglesia, adecuada tanto para estudios académicos como para la catequesis.
+
+4. **"The Ignatius Catholic Study Bible: The Gospel of Matthew"** de Scott Hahn y Curtis Mitch
+   - Este estudio bíblico incluye notas exegéticas y comentarios que reflejan la teología católica, utilizando referencias patrísticas y del Magisterio.
+
+5. **"Fire of Mercy, Heart of the Word: Meditations on the Gospel According to St. Matthew"** de Erasmo Leiva-Merikakis (ahora conocido como Simeon)
+   - Este comentario en varios volúmenes ofrece una meditación profunda y literaria sobre el texto de Mateo, con un enfoque contemplativo y espiritual.
+
+### Estudios Teológicos y Espirituales
+
+1. **"The Word on Fire Bible: The Gospels"** de Bishop Robert Barron
+   - Aunque abarca todos los evangelios, las reflexiones y comentarios del obispo Barron sobre Mateo son particularmente valiosas, ofreciendo una visión teológica y pastoral desde una perspectiva católica contemporánea.
+
+2. **"Jesus of Nazareth: From the Baptism in the Jordan to the Transfiguration"** de Joseph Ratzinger (Benedicto XVI)
+   - Aunque no es un comentario exclusivo sobre Mateo, este libro ofrece una exégesis profunda de varios pasajes clave del evangelio y es esencial para entender la teología de Jesús según Benedicto XVI.
+
+### Colecciones Patrísticas
+
+1. **"Ancient Christian Commentary on Scripture: New Testament IIA, Matthew 1-13" y "New Testament IIB, Matthew 14-28"** editados por Manlio Simonetti
+   - Estos volúmenes recopilan comentarios de los Padres de la Iglesia, muchos de los cuales son venerados en la tradición católica.
+
+### Otros Recursos Importantes
+
+1. **"The Gospel of Matthew"** (Catena Aurea) de Santo Tomás de Aquino
+   - Una recopilación de comentarios patrísticos organizada por Santo Tomás de Aquino. Es una fuente invaluable de interpretación patrística del Evangelio de Mateo.
+
+2. **"The Gospel According to Matthew: An Expository Commentary"** de A. W. Pink
+   - Aunque Pink es más conocido como un autor protestante, su comentario es a menudo recomendado en círculos católicos por su profundidad exegética y espiritual.
+
+Estos libros y comentarios proporcionan una rica comprensión del Evangelio de Mateo desde una perspectiva católica, integrando la exégesis bíblica con la teología, la tradición y la espiritualidad de la Iglesia Católica.
+
+CUÁL FUE EL MENSAJE TRANSMITIDO POR EL AUTOR
+Sí, puedo proporcionarte un resumen de los comentarios sobre Mateo 1:1-17 de algunos de los autores y fuentes mencionadas anteriormente. Este pasaje contiene la genealogía de Jesús, que es un texto rico en significado teológico e histórico. A continuación, te doy una visión general de algunos comentarios destacados:
+
+### Comentarios Católicos sobre Mateo 1:1-17
+
+1. **"The Gospel of Matthew"** de Daniel J. Harrington, SJ
+   - Harrington explica que la genealogía de Jesús en Mateo tiene un propósito teológico clave: mostrar a Jesús como el cumplimiento de las promesas hechas a Abraham y David. Resalta cómo Mateo estructura la genealogía en tres grupos de catorce generaciones, lo que puede simbolizar una organización ordenada y divina de la historia.
+
+2. **"The Navarre Bible: St. Matthew"** (University of Navarre)
+   - Este comentario subraya la importancia de la genealogía para demostrar la legitimidad mesiánica de Jesús. La inclusión de mujeres en la genealogía (Tamar, Rahab, Rut y Betsabé) se comenta como un signo de la misericordia y la universalidad del plan de salvación de Dios.
+
+3. **"Catholic Commentary on Sacred Scripture: The Gospel of Matthew"** de Curtis Mitch y Edward Sri
+   - Mitch y Sri destacan que Mateo comienza con una declaración explícita de la identidad de Jesús como "hijo de David, hijo de Abraham", lo que establece la base para su legitimidad como Mesías. También explican la importancia de los nombres y eventos mencionados en la genealogía en relación con la historia de Israel.
+
+4. **"The Ignatius Catholic Study Bible: The Gospel of Matthew"** de Scott Hahn y Curtis Mitch
+   - Hahn y Mitch comentan sobre la estructura de la genealogía, señalando que el número catorce puede tener una significancia simbólica relacionada con el nombre de David (en hebreo, las letras del nombre David suman catorce). Esto refuerza la conexión de Jesús con Davidic line.
+
+5. **"Fire of Mercy, Heart of the Word: Meditations on the Gospel According to St. Matthew"** de Erasmo Leiva-Merikakis (ahora conocido como Simeon)
+   - Leiva-Merikakis ofrece una meditación más contemplativa, enfocándose en la inclusión de figuras inusuales en la genealogía como un signo de la gracia inclusiva de Dios. También explora el significado espiritual de la genealogía en el contexto de la historia de la salvación.
+
+### Comentarios Patrísticos
+
+1. **Catena Aurea de Santo Tomás de Aquino**
+   - La Catena Aurea, una recopilación de comentarios de los Padres de la Iglesia, ofrece interpretaciones patrísticas sobre este pasaje. San Jerónimo, por ejemplo, observa la inclusión de mujeres con antecedentes controversiales como una indicación de que Jesús vino a redimir a todos, sin importar su pasado.
+
+2. **"The Gospel of Matthew"** de R.T. France (comentario patrístico)
+   - France, aunque no específicamente un autor católico, es apreciado por su uso de fuentes patrísticas. En su comentario sobre Mateo 1:1-17, señala cómo los Padres de la Iglesia vieron la genealogía como una validación de la humanidad y divinidad de Jesús.
+
+### Reflexiones y Observaciones Generales
+
+- **La estructura de la genealogía**: La organización en tres grupos de catorce generaciones se ve como un diseño literario que resalta la providencia divina en la historia de la salvación.
+- **Inclusión de mujeres y figuras no judías**: La inclusión de mujeres y gentiles en la genealogía es vista como un anticipo de la universalidad del Evangelio.
+- **La conexión con la historia de Israel**: La genealogía sitúa a Jesús firmemente dentro de la historia de Israel, mostrando que es el cumplimiento de las promesas hechas a los patriarcas y a la casa de David.
+
+Estos comentarios subrayan cómo la genealogía en Mateo 1:1-17 no es simplemente una lista de nombres, sino una declaración teológica profunda sobre la identidad y misión de Jesús.
 
 
-.1.2.5 CUÁL FUE EL MENSAJE TRANSMITIDO POR EL AUTOR
+
+E-SWORD
 Mateo quiere transmitir esperanza, y que esté basada en la fe. La seguridad de que Jesús es el Mesías.
 De que Dios incluye en la salvación a los excluidos, sea por no ser parte del pueblo judío, o por ser considerados así
 por la ley o las tradiciones.
+
+Mateo es sensible a esta realidad, que él también la vive. Habla desde su experiencia personal con la realidad y con
+Dios.
 Afirma que en Él se cumplen las Escrituras, por eso las abundantes citas.
 Asegurando que Jesús ha venido por los excluidos, donde él se incluye Mt 9,9-13. Lo veremos en este texto en 1,3.5.6
 donde menciona a cuatro mujeres extranjeras, no pertenecían al pueblo de Dios, y además junto con María en una situación
@@ -123,17 +268,21 @@ del Espíritu Santo,
 Mat 28:20 y enséñenles a cumplir todo lo que yo les he encomendado a ustedes. Yo estoy con ustedes todos los días hasta
 el fin de la historia.”
 
-.1.2.6 CUÁL ES EL MENSAJE QUE TRANSMITIÓ EL SEÑOR
+CUÁL ES EL MENSAJE QUE TRANSMITIÓ EL SEÑOR
 Recordemos Que es evangelio es decir una Buena Nueva, algo que necesitan los oyentes en ese momento específico, una
 Buena Noticia.
 
 Estas palabras de hombre fueron reconocidas como Palabra de Dios, transmitieron fe y esperanza a la comunidad, y sobre
 todo la certeza de la presencia de Dios.
+
  La convicción de que estaban en lo correcto: Jesús era el Mesías esperado, por eso deberían perseverar en su
 propuesta.
  Que nadie estaba excluido del Pueblo de Dios, ni los llamados pecadores ni los extranjeros por eso deberían acogerlos
 como hermanos.
  Que las Escrituras se leen desde la fe en Jesús. Por ello se releerían las Escrituras desde el Espíritu de Cristo.
+
+Quiere comunicar la fe en Cristo, presentarlo desde la experiencia judía, resaltar la novedad del evangelio y hacerla
+vida en esas condiciones concretas.
 
 
  MEDITATIO ¿QUÉ ME DICE EL SEÑOR?
