--- a/lectio/marcos.html
+++ b/lectio/marcos.html
@@ -40,7 +40,7 @@ LECTIO 1
 AUTOR 1
 MOTIVO DE ESCRIBIR EL EVANGELIO 1
 TEMAS CENTRALES DEL EVANGELIO 2
-SITUACION DE LA COMUNIDAD 3
+SITUACIÓN DE LA COMUNIDAD 3
 TEXTOS PARALELOS 4
 CONTEXTOS 5
 LOS PADRES DE LA IGLESIA 6
@@ -50,6 +50,56 @@ LECTIO
 QUE DIJO EL TEXTO
 
 AUTOR
+Marcos, también conocido como Juan Marcos, es una figura prominente en el Nuevo Testamento y es tradicionalmente considerado el autor del Evangelio de Marcos. A continuación se presenta un resumen de lo que se sabe sobre él, su vida y su incorporación a la misión cristiana:
+
+### Orígenes y Vida Personal
+- **Nombre**: Su nombre completo era Juan Marcos. "Juan" era su nombre hebreo y "Marcos" su nombre romano.
+- **Familia**: Era hijo de María, una mujer de Jerusalén cuya casa era un punto de reunión para los primeros cristianos (Hechos 12:12). Es posible que haya sido primo de Bernabé (Colosenses 4:10).
+
+### Incorporación a la Misión Cristiana
+- **Primeros Años**: Marcos aparece por primera vez en el relato de los Hechos de los Apóstoles como acompañante de Pablo y Bernabé en su primer viaje misionero (Hechos 12:25; 13:5).
+- **Conflicto con Pablo**: Abandonó a Pablo y Bernabé en Perga de Panfilia, lo que provocó un desacuerdo entre Pablo y Bernabé cuando este último quiso llevarlo nuevamente en un segundo viaje misionero (Hechos 15:37-39). Como resultado, Bernabé y Marcos se separaron de Pablo y se fueron a Chipre.
+
+### Reconciliación y Trabajo Posterior
+- **Reconciliación con Pablo**: Más tarde, parece que hubo una reconciliación entre Pablo y Marcos. En varias de sus cartas, Pablo menciona a Marcos de manera positiva, indicando que es un colaborador valioso (Colosenses 4:10; Filemón 1:24; 2 Timoteo 4:11).
+- **Trabajo con Pedro**: Según la tradición, Marcos también trabajó estrechamente con el apóstol Pedro, quien lo menciona como "su hijo" en la fe (1 Pedro 5:13). Se cree que el Evangelio de Marcos está basado en las enseñanzas y recuerdos de Pedro.
+
+### Autoría del Evangelio
+- **Evangelio de Marcos**: Es uno de los cuatro evangelios canónicos del Nuevo Testamento y el más breve de ellos. Fue escrito en griego y es considerado por muchos estudiosos como el primer evangelio escrito, sirviendo como fuente para los evangelios de Mateo y Lucas.
+- **Contenido y Estilo**: El Evangelio de Marcos es conocido por su estilo narrativo vivaz y directo. Enfatiza las acciones de Jesús más que sus enseñanzas largas, presentándolo como el Mesías y el Hijo de Dios a través de sus obras y milagros.
+
+### Legado y Tradición
+- **Patronazgo**: San Marcos es el santo patrón de Venecia, donde sus restos supuestamente fueron trasladados en el siglo IX. La Basílica de San Marcos en Venecia está dedicada a él.
+- **Fiesta**: La fiesta de San Marcos se celebra el 25 de abril en la Iglesia Católica y en otras tradiciones cristianas.
+
+En resumen, Marcos es una figura clave en la expansión temprana del cristianismo, conocido tanto por su papel como colaborador de Pablo y Pedro, como por ser el autor del Evangelio que lleva su nombre.
+
+
+FECHA Y DESTINATARIOS
+El Evangelio de Marcos es uno de los cuatro evangelios canónicos del Nuevo Testamento y, según la mayoría de los estudiosos, es el más antiguo de los cuatro. Determinar la fecha exacta de su composición es complejo y depende del análisis de varios factores históricos y literarios. Aquí se presentan algunos puntos clave sobre la datación del Evangelio de Marcos:
+
+### Fecha de Composición
+1. **Entre 65 y 75 d.C.**: La mayoría de los estudiosos coinciden en que el Evangelio de Marcos fue escrito en algún momento entre los años 65 y 75 d.C. Esta datación se basa en varios factores:
+
+    - **Destrucción del Templo de Jerusalén**: Marcos 13:2 menciona la destrucción del Templo, que ocurrió en el año 70 d.C. Esto ha llevado a muchos a pensar que el evangelio fue escrito poco antes o después de este evento.
+  
+    - **Persecuciones de Nerón**: Las referencias a las persecuciones y tribulaciones (Marcos 13:9-13) podrían reflejar las experiencias de los cristianos bajo las persecuciones de Nerón, que comenzaron alrededor del año 64 d.C.
+
+### Evidencia Interna y Externa
+2. **Evidencia Interna**:
+    - **Estilo y Teología**: El estilo y las temáticas teológicas del evangelio sugieren una composición en un contexto donde las primeras comunidades cristianas estaban consolidándose y enfrentando persecuciones.
+  
+    - **Dependencia de Tradiciones Orales**: El Evangelio de Marcos muestra señales de haber recopilado y organizado tradiciones orales y relatos previos, lo que indica una fase temprana en la tradición escrita cristiana.
+
+3. **Evidencia Externa**:
+    - **Testimonios de Padres de la Iglesia**: Papías de Hierápolis, escribiendo a principios del siglo II, menciona que Marcos fue el intérprete de Pedro y escribió con exactitud lo que recordaba de las enseñanzas de Pedro. Sin embargo, no especifica la fecha exacta de esta redacción.
+
+### Contexto Histórico
+4. **Situación en Roma**: Algunos estudiosos sugieren que el Evangelio de Marcos fue compuesto en Roma, dado el contexto de persecución y la posible audiencia gentil del texto. La situación de los cristianos en Roma bajo Nerón y la necesidad de fortalecer a la comunidad en tiempos difíciles podrían haber influido en la composición del evangelio.
+
+### Conclusión
+En resumen, la datación del Evangelio de Marcos se sitúa generalmente entre los años 65 y 75 d.C., con una tendencia a ubicarlo más cerca del año 70 d.C., en relación con la destrucción del Templo de Jerusalén. La combinación de evidencia interna y externa, junto con el contexto histórico de persecuciones y consolidación de la iglesia primitiva, apoya esta datación.
+
 
 MOTIVO DE ESCRIBIR EL EVANGELIO
 La motivación detrás de la escritura del Evangelio de Marcos por parte de Marcos Evangelista puede atribuirse a varios
