--- a/lectio/intro.html
+++ b/lectio/intro.html
@@ -25,6 +25,7 @@
           <br>EDITH STEIN</i></b></h3>
       <ol>
         <li class="li"><a href="../lectio/mateo.html">MATEO</a></li>
+        <li class="li"><a href="../lectio/marcos.html">MARCOS</a></li>
         <li class="li"><a href="../lectio/apocalipsis.html">APOCALIPSIS</a></li>
       </ol>
     </div>
