--- a/lectio/mateo.html
+++ b/lectio/mateo.html
@@ -19,6 +19,7 @@
       </div>
     </header> <br><br>
     <!-- *************************************************************************** -->
+     <div class="enlace">
     <h1 class="init">OBJETIVO</h1>
     <h3><b>Tanto el que evangeliza como los que escuchen, crezcan en el amor de Dios</b></h3>
     <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
