--- a/lectio/mateo.html
+++ b/lectio/mateo.html
@@ -342,7 +342,8 @@ a. Cristificar a la persona
 b. Que esto sea útil a los demás en su propio proceso
 c. Crecer en unidad con Dios y la humanidad de todos los tiempos
 .4 Cuál es la invitación de conversión que me hace
-Cada persona es importante, cada labor es importante, dedicar un tiempo a personas concretas y labores concretas
+Cada persona es importante, cada labor es importante, dedicar un tiempo a personas concretas y labores concretas.
+Aprendiendo, actuando y orando.
 .5 ¿Cuál sería el cambio de mi pensamiento, porque no soy así?
 Orden, disciplina y criterio.
 .6 Se armoniza con lo anteriormente contemplado
@@ -365,76 +366,68 @@ b. Buscar la relación con las personas y con el camino al Señor
 
 .12 Resumirlo en una oración de gracias y petición
 Señor:
-Que caminemos a ti, desde nuestras propias circunstancias,
-Por ser uno en Cristo esté atento a las necesidades de mi hermano,
-Que respete su verdad como parte del camino
-Y lo que haga con amor sea útil a los demás.
 
+<b><i>Que mi actitud, oración y acción de cada día y con cada persona
+            sean hechas cada vez con su amor</i></b>
+
+
+SIN EMBARGO, ES NECESARIO RECORDAR QUE TODO ES GRACIA, 
+POR LO QUE DEBERÉ CULMINAR SIEMPRE CON UN GRAN SILENCIO
         </pre>
       </div>
     </section>
-    <!-- * -->
+    <!--********************************************************************-->
     <section id="1.18-25">
       <div>
         <h2>MATEO 1.18-25</h2>
         <pre>
-Mateo 1,18-25
+<p>
 LA LECTIO DIVINA
- Para que un mensaje sea Buena Noticia debe encarnarse en la vida de los destinatarios, en sus esperanzas y angustias.
-Dios se da a conocer a sí mismo en esos mensajes, la clave de lectura es Jesucristo, con él y en él conocemos al Padre a
-través de sus orientaciones.
+Para que un mensaje sea Buena Noticia debe encarnarse en la vida de los destinatarios, en sus esperanzas y angustias.
 
+Dios se da a conocer a sí mismo en esos mensajes, la clave de lectura es Jesucristo, con él y en él conocemos al Padre a través de sus orientaciones.
+
+Perspectivas de estudio: personal y apologética
 
 1 LECTIO ¿QUÉ DIJO EL SEÑOR?
-1.1 LA LECTURA DEL TEXTO ( DEFINIRLO Y COMPRENDERLO)
-1.1.1 DEFINIR EL TEXTO
-1.1.1.1 LATINOAMERICANA
-Mat 1:18 Este fue el principio de Jesucristo: María, su madre, estaba comprometida con José; pero antes de que vivieran
-juntos, quedó embarazada por obra del Espíritu Santo.
-Mat 1:19 Su esposo, José, pensó despedirla, pero como era un hombre bueno, quiso actuar discretamente para no difamarla.
-Mat 1:20 Mientras lo estaba pensando, el ángel del Señor se le apareció en sueños y le dijo: “José, descendiente de
-David, no tengas miedo de llevarte a María, tu esposa, a tu casa; si bien está esperando por obra del Espíritu Santo,
-Mat 1:21 tú eres el que pondrás el nombre al hijo que dará a luz. Y lo llamarás Jesús, porque él salvará a su pueblo de
-sus pecados”.
-Mat 1:22 Todo esto sucedió para que se cumpliera lo que había dicho el Señor por boca del profeta:
-Mat 1:23 La virgen concebirá y dará a luz un hijo, y le pondrán por nombre Emmanuel, que significa: Dios-con-nosotros.
-Mat 1:24 Cuando José se despertó, hizo lo que el ángel del Señor le había ordenado y tomó consigo a su esposa.
-Mat 1:25 Y sin que hubieran tenido relaciones, dio a luz un hijo, al que puso por nombre Jesús.
+LA LECTURA DEL TEXTO ( DEFINIRLO Y COMPRENDERLO)
+ DEFINIR EL TEXTO
+LATINOAMERICANA
+Mat 1:18 Este fue el principio de Jesucristo: María, su madre, estaba comprometida con José; pero antes de que vivieran juntos, quedó embarazada por obra del Espíritu Santo.
+
 
 1.1.1.2 JERUSALÉN
-Mat 1:19 Su marido José, que era justo, pero no quería infamarla, resolvió repudiarla en privado.
+
 Mat 1:25 Y no la conocía hasta que ella dio a luz un hijo, y le puso por nombre Jesús.
 
-1.1.1.3 VERSIÓN GRIEGA (LXX- TISCHENDORF)
+ VERSIÓN GRIEGA (LXX- TISCHENDORF)
 
 (iBY+) και y ουκ no εγινωσκεν estaba conociendo αυτην a ella εως hasta ου cuando ετεκεν dio a luz a τον a el υιον hijo
 αυτης de ella τον el πρωτοτοκον primogénito και y εκαλεσεν llamó το el ονομα nombre αυτου de él ιησουν Jesús
 
-1.1.1.4 VERSIÓN LATINA (VULGATA)
+VERSIÓN LATINA (VULGATA)
 et non cognoscebat eam donec peperit filium suum primogenitum et vocavit nomen eius Iesum
-1.1.1.5 VERSIÓN JUDIA (KADOSH)
+
+ VERSIÓN JUDIA (KADOSH)
 pero no tuvo relaciones sexuales con ella hasta que dio a luz a su hijo, y le llamó Yahshúa.
-1.1.1.6 NVI
+
+NVI
 Pero no tuvo relaciones conyugales con ella hasta que dio a luz un hijo, a quien le puso por nombre Jesús.
 
-1.1.1.7 RV60
+ RV60
 Pero no la conoció hasta que dio a luz a su hijo primogénito; y le puso por nombre JESÚS.
 
-
-1.1.1.8 COMPARACIÓN E-SWORD
-Sin variaciones significativas
 
 INTRODUCCIÓN
 
 
-1.1.2 COMPRENCIÓN DEL TEXTO EN SU CONTEXTO VITAL
-1.1.2.1 LOS DESTINATARIOS
-1.1.2.1.1 Cuál era la situación vital
+COMPRENSIÓN DEL TEXTO EN SU CONTEXTO VITAL
 
-Años 64-70 la comunidad cristiana era expulsada de las sinagogas y esto genera una crisis en el seno de las familias
-judías con miembros cristianos, además el gobierno romano inicia la persecución a los cristianos.
-La comunidad cristiana está en una crisis, su opción por Jesús les ha traído grandes problemas. ¿Cómo lo bueno pude
-traer males? Y dudan. Piensan que quizás sea mejor retornar a lo seguro
+LOS DESTINATARIOS
+ Cuál era la situación vital
+
+Años 64-70 la comunidad cristiana era expulsada de las sinagogas y esto genera una crisis en el seno de las familias judías con miembros cristianos, además el gobierno romano inicia la persecución a los cristianos.
+La comunidad cristiana está en una crisis, su opción por Jesús les ha traído grandes problemas. ¿Cómo lo bueno puede traer males? Y dudan. Piensan que quizás sea mejor retornar a lo seguro
 
 1.1.1.1.1 Qué esperaban de Dios
 Lo probable era la necesidad de paz. Interior al ser confirmados en su fe en Jesús y exterior al evitar la tragedia de
@@ -780,12 +773,12 @@ esta gran vocación a vivir en el amor. La oración del Padre Nuestro es la mejo
 
 
 
-1.1.1.3 GÉNERO LITERARIO
-1.1.1.3.1 Cómo fue comunicado el mensaje
+ GÉNERO LITERARIO
+ Cómo fue comunicado el mensaje
 Es una narración rítmica, esquemática con miras a ser fácilmente comprendida y hasta memorizada
 
-1.1.1.4 EL MENSAJE
-1.1.1.4.1 cuál fue el mensaje transmitido por el autor
+ EL MENSAJE
+ cuál fue el mensaje transmitido por el autor
 Jesús no es solo el hijo de David y Abraham, (1,1) es el Mesías anunciado por Isaías, seguirlo es ser fiel a Dios.
 Les muestra como la acción de Dios pone a María al margen de la ley de Moisés. José conoce la ley, dice el texto es un
 hombre justo, añade que temía actuar contra la ley del Señor. Sin embargo decide no seguir la letra, pero si el
@@ -794,7 +787,7 @@ reconocer su actuar.( Así como les está pasando a ellos). El Señor lo confirm
 quien pondrá el nombre al niño. Se dice que será su nombre Emmanuel. Y le ponen Jesús. Significa el primero Dios con
 nosotros y el segundo Dios salva.
 
-1.1.1.4.2 Cuál es el mensaje que transmitió el Señor a través del mensaje del autor
+ Cuál es el mensaje que transmitió el Señor a través del mensaje del autor
 a. Él está presente en todas las circunstancias humanas, orientándonos, de manera misteriosa, pero real, espera de
 nosotros apertura y disponibilidad.
 b. La encarnación es el milagro de Dios que comparte nuestras limitaciones y nos da ejemplo.
@@ -1032,7 +1025,7 @@ Que aprenda a leer la vida como un proceso donde aprendemos una sola cosa: a ama
 4. CONTEMPLATIO QUE ME REVELAS DE TI SEÑOR
 Dios es amor, y caminamos a su encuentro amando. En todas sus acciones hay rastros de su amor. Dice el apóstol Juan que
 el que ama a conocido a Dios y a nacido de él. 1Jn 4,7 y su amor es el vínculo de la unidad.
-
+</p>
         </pre>
       </div>
     </section>
